--- a/index.html
+++ b/index.html
@@ -30,11 +30,26 @@
     </div>
 
 
-    <div class="row"><h2>This row should get 3 equal width columns, each a different color.</h2></div>
+    <div class="row"><h2>This row should get 3 equal width columns, each a different color.</h2>
+      <div class="col-4">
+        <div class="box orange">4 columns</div>
+      </div>
+
+      <div class="col-4">
+        <div class="box blue">4 columns</div>
+      </div>
+
+      <div class="col-4">
+        <div class="box black">4 columns</div>
+      </div>
+
+    </div>
+
 
     <div class="row"><h2>This row should get 2 equal width columns, each a different color.</h2></div>
 
     <div class="row"><h2>This row should get a single 12-col column</h2></div>
+
 
   </main>
 </body>
