--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
       </div>
     </div>
 
-
-    <div class="row"><h2>This row should get 3 equal width columns, each a different color.</h2>
+    <div class="row">
       <div class="col-4">
         <div class="box orange">4 columns</div>
       </div>
@@ -46,9 +45,27 @@
     </div>
 
 
-    <div class="row"><h2>This row should get 2 equal width columns, each a different color.</h2></div>
+    <div class="row">
+      <div class="col-6">
+        <div class="box orange">6columns</div>
+      </div>
+    <div class="col-6">
+        <div class="box blue">6 columns</div>
+      </div>
+      </div>
 
-    <div class="row"><h2>This row should get a single 12-col column</h2></div>
+    <div class="row">
+      <div class="col-12">
+        <div class="box black">12 columns</div>
+      </div>
+
+    </div>
+
+    <div>
+      <h2>This row should get 3 equal width columns, each a different color.</h2>
+      <h2>This row should get 2 equal width columns, each a different </h2>
+      <h2>This row should get a single 12-col column</h2>
+    </div>
 
 
   </main>
